--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-alpha02'//---------------------------material
 
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02'//--------------------nav controller
+    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha02"
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'//--------------------------------------------rx
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
