--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 <!--    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
 
     <application
-        android:name=".App"
+        android:name=".koin.application.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +25,7 @@
         </activity>
 
         <activity android:name=".view.activity.MainActivity"/>
+
         <receiver
             android:name=".util.connection_manager.NetworkChangeReceiver"
             android:label="NetworkChangeReceiver" >
