--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])//--------------------------------------base
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -60,8 +60,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-alpha02'//---------------------------material
 
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha02'//--------------------nav controller
-    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha02"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0'//----------------------------nav controller (ktx + x)
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'//--------------------------------------------rx
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
@@ -71,7 +71,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'//-------------------------------------recycler
     implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
 
-    implementation "com.squareup.okhttp3:logging-interceptor:$okkHttpVersion"//---------------------ok http
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"//-------------------------------ok http
 
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"//-----------------------------retrofit
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
@@ -86,4 +86,7 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
 
     implementation "org.koin:koin-android:$koin_version"//------------------------------------------Koin
+
+    implementation "org.greenrobot:eventbus:3.0.0"//------------------------------------------------event bus
+    kapt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
 }
