--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ eventBusIndex : 'com.example.myapp.MyEventBusIndex' ]
+            }
+        }
     }
 
     compileOptions {
@@ -89,4 +95,10 @@ dependencies {
 
     implementation "org.greenrobot:eventbus:3.0.0"//------------------------------------------------event bus
     kapt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
+}
+
+kapt {
+    arguments {
+        arg('eventImage', 'com.example.myapp.MyEventBusIndex')
+    }
 }
